Route NPC decisions through Jev and delegate bounded dialogue to DeepSeek